# neurolake

./: .dockerignore  .env.example  .gitignore  ACTION_REQUIRED.md  ACTUAL_COMPLETION_STATUS.md  ADVANCED_DASHBOARD_GUIDE.md  AI_LLM_CONFIGURATION_COMPLETE.md  ALL_FIXES_COMPLETE.md  ALL_LLM_PROVIDERS_ADDED.md  ARCHITECTURAL_GAPS_FIXED.md  ARCHITECTURAL_GAPS_RESOLVED.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_INTEGRITY_ASSESSMENT.md  ARCHITECTURE_NCF_FIRST.md  ARCHITECTURE_PYSPARK.md  ARCHITECTURE_VERIFICATION_REPORT.md  BACKEND_INTEGRATION_STATUS.md  BENCHMARK_COMPLETE.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.md  BUILD_STATUS_FINAL.md  BUSINESS_PLAN.md  CATALOG_BROWSER_IMPLEMENTATION.md  CATALOG_INTEGRATION_ISSUE.md  CLOUD_AUTH_IAM_COMPLETE.md  CODE_STRUCTURE_GUIDE.md  COLUMN_STATS_ENDPOINTS_COMPLETE.md  COMPETITIVE_ANALYSIS.md  COMPLETE_350_TASKS.md  COMPLETE_CLEANUP_SUMMARY.md  COMPLETE_FEATURES_LIST.md  COMPLETE_INTEGRATION_STATUS.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_NDM_IMPLEMENTATION_STATUS.md  COMPLETE_NEXT_STEPS_STATUS.md  COMPLETE_PLATFORM_ACCESS.md  COMPLETE_PLATFORM_ARCHITECTURE.md  COMPLETE_SESSION_SUMMARY.md  COMPREHENSIVE_CATALOG_IMPLEMENTATION.md  (+202 more)
.github/workflows/: README.md  build-deploy.yml  ci.yml  release.yml
alembic/versions/: c32f1f4d9189_initial_schema_tables_columns_users_.py  d4e8b9f2a5c1_add_rbac_tables.py
catalog_data/: catalog.json
config/: environment.json
core/ncf-rust/: Cargo.toml
core/ncf-rust/src/: lib.rs
core/ncf-rust/src/compression/: mod.rs  zstd_compression.rs
core/ncf-rust/src/format/: mod.rs  reader.rs  reader_fast.rs  schema.rs  writer.rs
core/ncf-rust/src/serializers/: mod.rs  numeric.rs  stats.rs  string.rs
docs/: CONFIGURATION.md  NCF_FORMAT_SPEC_v1.0.md  intent_api.md  natural_language_queries.md
frontend/: .dockerignore  .env.example  ADVANCED_FEATURES_IMPLEMENTATION.md  Dockerfile  FINAL_POLISH_IMPLEMENTATION.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUERY_EDITOR_IMPLEMENTATION.md  index.html  next.config.js  package.json  playwright.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/e2e/: dashboard.spec.ts  login.spec.ts  query-editor.spec.ts
frontend/src/: App.tsx
helm/: README.md
helm/neurolake/: Chart.yaml  values.yaml
k8s/: README.md
k8s/autoscaling/: README.md  hpa.yaml  vpa.yaml
k8s/base/: api-deployment.yaml  api-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  kustomization.yaml  namespace.yaml  postgres-statefulset.yaml  pvc.yaml  secrets.yaml
k8s/cert-manager/: README.md  certificates.yaml  cluster-issuer.yaml
k8s/ingress/: README.md  ingress-nginx-config.yaml  ingress.yaml
k8s/logging/: README.md  elasticsearch-values.yaml  loki-values.yaml
k8s/monitoring/: README.md  prometheus-values.yaml  servicemonitors.yaml
migration_module/: README.md  __init__.py  config.py  execution_engine.py  logic_extractor.py  migration_dashboard.py  requirements.txt  upload_handler.py
migration_module/agents/: __init__.py  spark_converter_agent.py  sql_converter_agent.py
migration_module/connectors/: data_connector.py
migration_module/parsers/: __init__.py  etl_parser.py  mainframe_parser.py  sql_parser.py
migration_module/validators/: __init__.py  validation_framework.py
neurolake/: __init__.py  metadata_normalization.py  rule_registry.py  visual_sync.py
neurolake/agents/: __init__.py  base.py  coordinator.py  data_engineer.py  langgraph.py  tools.py  (+1 more)
scripts/: BACKUP_README.md  backup_database.py  backup_scheduler.py  backup_storage.py  init_admin_user.py
test_catalog_data/: catalog.json
test_data_e2e/: dept.json  employee.json  employee_analysis.json  employee_workflow.json  location.json  salgrade.json
test_data_ndm/: customers.json  orders.json  products.json
test_lineage_data/: lineage.json
test_schema_registry/: schemas.json
tests/: benchmark_ncf_vs_parquet.py  benchmark_optimization.py  benchmark_rust_vs_python.py  profile_ncf_performance.py  test_advanced_rules.py  test_agents.py  test_cache.py  test_compliance.py  test_config.py  test_data_engineer_agent.py  test_engine.py  test_engine_advanced.py  test_engine_advanced_features.py  test_engine_params.py  test_intent.py  test_llm.py  test_ncf_parquet_io.py  test_ncf_roundtrip.py  test_optimizer.py  test_phase1_integration.py  test_prompts.py  test_rust_integration.py  test_spark.py  test_spark_session.py  test_storage.py  validate_with_real_data.py
(+234 files in other folders)
