[package]
name = "ncf-rust"
version = "0.1.0"
edition = "2021"
authors = ["NeuroLake Team"]
license = "Apache-2.0"

[lib]
name = "ncf_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
byteorder = "1.5"

# Compression
zstd = { version = "0.13", features = ["zstdmt"] }

# Parallelism
rayon = "1.8"
crossbeam = "0.8"

# Utilities
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

# [[bench]]
# name = "serialization"
# harness = false
